update: meta tags

--- a/index.html
+++ b/index.html
@@ -3,14 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio</title>
-    
+    <meta
+      name="description"
+      content="Developer | Web Systems • ML Enthusiast • Security Curious"
+    />
+    <meta
+      name="keywords"
+      content="rajnishanand, rajnish anand, full stack developer, web developer portfolio, typescript developer, react developer, python developer, frontend developer, backend developer, web application developer"
+    />
+    <meta name="author" content="Rajnish Anand" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Social Media -->
+    <meta
+      property="og:title"
+      content="Rajnish Anand - Developer | Web Systems • ML Enthusiast • Security Curious"
+    />
+    <meta
+      property="og:description"
+      content="Fullstack Webdeveloper with keen interest in Machine learning and Cybersecurity"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rajnishanand.github.io" />
+
+    <title>Rajnish Anand - Developer</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google Font: JetBrains -->
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500&display=swap" rel="stylesheet" />
+        
     <!-- Material Symbols  -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>  <!-- &icon_names=stat_minus_1"/> -->
 
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Rajnish Anand",
+        "jobTitle": "Web Systems Developer",
+        "url": "https://rajnishanand.github.io",
+        "sameAs": [
+          "https://github.com/rajnishanand",
+          "https://linkedin.com/in/absolutezero"
+        ],
+        "knowsAbout": ["Web Development", "Typescript", "Python", "Java", "C++"]
+      }
+    </script>
+
   </head>
   <body>
+
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+
   </body>
 </html>
